# Build

./: CHIMERA_DEFENSIVE_LAB_PUSH_NOTE.md  GENESIS_Architecture.md  README.md  genesis.py  index.html  self_audit_improve.py  v2_test_notes.txt  v3_test_notes.txt  viz_notes.txt
audit_teachable_model/: MODEL_CARD_AUDIT_MODEL.md  README_AUDIT_MODEL.md  TEACHER_STUDENT_BRIDGE.md  predict_audit_issue.py  teacher_student_bridge.py  train_audit_model.py  training_metrics.json
autoincome-forge-v8-web/: README.md  app.html  bounties.html  index.html  playbook.html
chimera-defensive-lab/: .gitignore  README.md  pyproject.toml
darwin_agent_zero/: README.md  pyproject.toml
darwin_agent_zero/.github/workflows/: tests.yml
darwin_agent_zero/docs/: ARCHITECTURE.md  ROADMAP.md
darwin_agent_zero/scripts/: validate.py
darwin_agent_zero/src/dgm_zero/: __init__.py  archive.py  benchmark.py  case_miner.py  checkpoint.py  cli.py  curriculum.py  decision_matrix.py  evolver.py  health.py  map_elites.py  memory.py  meta_learning.py  metacognition.py  oracle.py  provenance.py  safety.py  self_instruction.py  signature.py  sota_methods.py  tools.py
darwin_agent_zero/tests/: test_benchmark.py  test_checkpoint.py  test_decision_matrix.py  test_evolver_artifacts.py  test_map_elites.py  test_oracle_memory.py  test_provenance.py  test_seed_integrity.py  test_sota_methods.py
docs/: AUTONOMOUS_BOUNTIES.md
emergent_intelligence_agent/: README.md
tools/: bounty_worker.py
verified-coding-loop-dashboard/: README.md  index.html  package.json  postcss.config.cjs  tailwind.config.js
(+79 files in other folders)
